--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -49,6 +49,10 @@
                 <a href="/baquiz"><button id="form-ba" class="webdev">Business Analytics</button></a>
                 <a href="/mlquiz"><button id="form-ml" class="ml"> Machine Learning</button></a>
             </div>
+            <div class="mix-quiz">
+                <div class="text-mix-quiz">Not sure about the subject? Take the below quiz and we will analyze and suggest the right course for you.</div>
+                <a href="/mix-quiz"><button id="form-ml" class="ml">Mix Quiz</button></a>
+            </div>
         </div>
     </div>
 
